--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -4,19 +4,15 @@
     max-width: 1000px !important;
 }
 
-/* Custom brand color */
-:root {
-  --vp-c-brand-1: #9d7a47;
-  --vp-c-brand-2: #b08f59;
-  --vp-c-brand-3: #c8a16e;
-  --vp-c-brand-soft: rgba(157, 122, 71, 0.14);
+
+.vp-doc .contributors-header h2 {
+    padding-top: 0;
+    border-top: none;
 }
 
-.dark {
-  --vp-c-brand-1: #c8a16e;
-  --vp-c-brand-2: #b08f59;
-  --vp-c-brand-3: #9d7a47;
-  --vp-c-brand-soft: rgba(176, 143, 89, 0.16);
+.vp-doc .sponsors-header h2 {
+    padding-top: 0;
+    border-top: none;
 }
 
 .dark .VPImage.logo {
